contemporary.css
/* ... */
.header-links {
  display: flex;
  justify-content: space-evenly;
  width: 20rem;
  padding-top: 0.5rem;
  margin-right: 3vw;
  margin-left: 3vw;
}

.header-links a {
  margin-top: -0.3rem;
  font-size: 1.3rem;
  color: rgb(72, 0, 72);
  text-shadow:  0px 0px 8px #4084,
                0px 0px 16px #408f;
  
  text-decoration: none;
  transition: color 0.6s, text-shadow 0.6s;
}

.header-links a:hover {
  color: rgb(255, 180, 250);
  text-shadow:  1px 1px 6px #408f,
                2px 2px 8px #408f,
                0px 0px 10px #408f;
                transition: color 0.2s, text-shadow 0.2s;
}

.tagline {
  z-index: 2;
  font-size: 2.3rem;
  align-self: flex-start;
  text-align: center;
  margin-top: 120px;
  padding-top: 1.3rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  
  color: #111;
  font-family: var(--lex-family);
  font-weight: 700;

  animation: blur-in 2s ease-in-out;
}

@media (min-width: 400px) {
  .tagline {
    margin-top: 160px;
  }
}
@media (min-width: 520px) {
  .tagline {
    font-size: 2.5rem;
  }
}
@media (min-width: 550px) {
  .tagline {
    margin-top: 140px;
  }
}
@media (min-width: 576px) {
  .tagline {
    font-size: 3rem;
  }
}

@media (min-width: 1300px) {
  .tagline {
    padding-top: 0px;
  }
}
@keyframes blur-in {
  0% {
    filter:blur(20px);
  }
  100% {
    filter: blur(0px);
  }
}

.clear-emphasis {
  color: #000;
  font-style: normal;
  text-shadow:
    2px 1px 9px rgb(255, 226, 254),
    2px 2px 14px rgb(255, 214, 253),
    6px 3px 18px rgba(255, 208, 253, 1.0);
  animation: emphasize-shadow 4s linear;
}

@keyframes emphasize-shadow {
  0% {
    color: #111;
    text-shadow: 4px 2px 10px #ffecfe00;
  }
  65% {
    color: #111;
    text-shadow: 4px 2px 10px #ffecfe00;
  }
  75% {
    color: #000;
    text-shadow:  4px 2px 3px #ffff,
                  4px 2px 8px #ffff,
                  4px 2px 20px #ffff,
                  4px 2px 30px #ffff,
                  4px 2px 40px #ffff;
  }
  100% {
    color: #000;
    text-shadow:
      2px 1px 9px rgb(255, 226, 254),
      2px 2px 14px rgb(255, 214, 253),
      6px 3px 18px rgba(255, 208, 253, 1.0);
  }
}

@media (min-width: 576px) {
  .personal-container {
    justify-content: space-between;
    flex-wrap: nowrap;
  }

  .header-links {
    justify-content: space-between;
    padding-top: 1rem;
  }
  
  .header-links a {
    font-size: 1.6rem;
  }

  .tagline {
    margin-top: 8rem;
  }
}

.header-identity {
  display:flex;
  flex-direction:column;
  margin-top: 0.7rem;
  color: rgb(1, 45, 134);
  text-shadow:
                1px 1px 2px #1183,
                2px 2px 4px #1182,
                3px 3px 4px #1182;
  padding-left: 1.0rem;
  padding-right: 0.5rem;
}

@media (min-width: 700px) {
  .header-identity {
    margin-left: 0.8rem;
  }
}

.header-name {
  font-size: 2.8rem;
  font-weight: 300;
  line-height: 1em;
  letter-spacing: 0.05rem;
  margin-bottom: 0px;
  color: rgb(11, 44, 177);
}

.header-fine {
  width: 200px;
  margin-left: 0.9rem;
  line-height: 1.1em;
  font-size: 1.05rem;
  letter-spacing: 0.05rem;
}

.banner-content {
  z-index: -1;
  overflow:hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 370px;
  background: radial-gradient(100% 400px ellipse at 110px 50px, #13f1fc -10%,#f470dc 97%);
}

.lower-wave {
  z-index: 2;
  position: absolute;
  bottom: -1px; /* fix for Safari alignment */
  width: 100%;
  height: min(10vw, 200px);
  background-image: url('data:image/svg+xml;utf8,<svg%20%20 data-name="Layer 1"%20%20 viewBox="0 0 1200 110.1677"%20%20 preserveAspectRatio="none"%20%20 version="1.1"%20%20 id="svg834"%20%20 width="1200"%20%20 height="110.1677"%20%20 xmlns="http://www.w3.org/2000/svg"%20%20 xmlns:svg="http://www.w3.org/2000/svg">%20 <path%20%20%20%20 d="m 321.39,53.727696 c 58,10.79 114.16,30.13 172,41.86 82.39,16.720004 168.19,17.730004 250.45,0.39 79.94,-16.81 162.83,-57.81 241.82,-78.64 70.05,-18.4799995 146.53,-26.0899995 214.34,-3 V 110.1677 H 0 V 82.817696 a 600.21,600.21 0 0 1 321.39,-29.09 z"%20%20%20%20 class="shape-fill"%20%20%20%20 id="path832" /></svg>');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: right 0px bottom 0px;
}

.moving-light {
  z-index: 1;
  position: absolute;
  width: 600%;
  aspect-ratio: 1.0;
  background-image: radial-gradient(circle 600px,
                    #eefc,
                    #eefb 30%,
                    transparent 100%);
  background-repeat: no-repeat;
  background-position-x: 300px;

  transform: translate(-650px, -110px);
  animation:  light-drift 7s ease-out;
  
}

@keyframes light-drift {
  0% {
    transform: translate(-150px, 50px);
    filter:opacity(0.15);
  }
  10% {
    transform: translate(-470px, -98px);
    filter:opacity(0.8);
  }
  100% {
    transform: translate(-650px, -110px);
    filter:opacity(1.0);
  }
}

.decorated-square {
  position: relative;
}

.decorated-square::before {
  z-index: -1;
  content: '';
  position: absolute;
  top: -0.9rem;
  left: -1.9rem;
  width: 5rem;
  height: 5rem;
  border-radius: 10px;
  background-color: rgba(110 50 255 / 0.2);
  box-shadow: 12px 12px 0px rgba(110 50 255 / 0.1);
  transform: rotate(-20deg);
}

@media (max-width: 680px) {
  .decorated-square::before {
    left: -0.5rem;
  }

}

.blurb-section {
  z-index: 1;
  padding-top: 5rem;
  font-size: var(--copy-size);
  background-color: black;
  padding-bottom: 5rem;
}

.blurb-section p {
  padding-left: 1.4rem;
  padding-right: 0.0rem;
  color: var(--copy-color);
}

@media (max-width: 400px) {
  .blurb-section p {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

.project-section {
  position: relative;
  z-index: 1;
  padding-bottom: 5rem;
  background-image:
    linear-gradient(to top, #111, #000);
}

/* Applies to "Clients" header */
.project-section h2 {
  font-family: var(--lex-family);
  font-size: 2.4rem;
  text-align: center;
  color: rgb(235, 155, 231);
}
/* ... */

